--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./style/style2.css">
 
   </head>
     <Body>
-      <H1>Odin Recipes</H1>
-      <br>
-      <a href="./recipes/lasagna.html">Lasagna</a>
+      <H1 class="title">Deafspeaker's Recipes</H1>
+      <span class="recipe-linker"><a href="./recipes/lasagna.html" class="recipe-link">Lasagna</a></span><br>
+      <span class="recipe-linker"><a href="./recipes/chili.html" class="recipe-link">Chili</a></span>
     </Body>
 </html>
