--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
 
-  </head>
-  <body>
-    <h1>Lasagna</h1>
-  <br>
-  <img src="../images/lasagna.jpg">
-  <br>
-  <h2>Layered Pasta Dish</h2>
-  <br>
-  <h3>Ingredients</h3>
-  <ul>
-    <li>Boxed Lasagna Noodles</li>
-    <li>Pasta Sauce</li>
-    <li>1lb Ground Beef</li>
-    <li>Vegetables</li>
-    <li>Cottage Cheese</li>
-    <li>Mozzarella Cheese</li>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="../style/style.css">
 
-  </ul>
-  <br>
-    <ol>
+</head>
+
+<body>
+  <div class="content">
+    <div class="title">
+    <h1 class="headers dish">Lasagna</h1>
+    
+    <img src="../images/lasagna.jpg" class="pic">
+    </div>
+    <div class="things">
+    <h3 class="headers ingrediants">Ingredients</h3>
+    <ul class="items">
+      <li>Boxed Lasagna Noodles</li>
+      <li>Pasta Sauce</li>
+      <li>1lb Ground Beef</li>
+      <li>Vegetables</li>
+      <li>Cottage Cheese</li>
+      <li>Mozzarella Cheese</li>
+
+    </ul>
+    <br>
+    <h3 class="headers steps">Steps</h3>
+    <ol class="instructions">
       <li>Preheat Oven to 450 degrees.</li>
       <li>Brown the Ground Beef in a pan. </li>
       <li>Chop Vegetables</li>
       <li>Drain grease from ground beef and return to pan.</li>
       <li>Add Vegetables and pasta sauce to pan with <br>
-          ground beef and simmer for 10 miunutes. </li>
+        ground beef and simmer for 10 miunutes. </li>
       <li>Grab your cassarole dish and start with a <br>
-          layer of your pan mix, followed by a layer <br>
-          of cottage cheese. Repeate until you get to <br>
-          top of your dish, or run out of ingredients.</li>
+        layer of your pan mix, followed by a layer <br>
+        of cottage cheese. Repeate until you get to <br>
+        top of your dish, or run out of ingredients.</li>
       <li>Place dish in oven and cook for about an hour</li>
       <li>Place as much as you want of mazzarella <br>
         for a top layer.</li>
       <li>Cook for an additional 15-30 minutes until <br>
-          cheese is golden brown.</li>
+        cheese is golden brown.</li>
       <li>Take it out and let rest before serving.</li>
     </ol>
-  </body>
-  </html>
+  </div>
+  </div>
+</body>
+
+</html>
